fixed layout issue

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -26,9 +26,10 @@
         font-family: "Trebuchet MS"; 
       }
       #header {
-        background-image: url(../images/banner.jpg); background-repeat: repeat-x;
+        background-image: url('../img/banner.jpg'); background-repeat: repeat-x;
         margin: 2px;
         border: solid 4px #224a54;
+        background-color:#ecefe4;
         color:white; font-size:18pt; 
         text-align:left; font-weight:bold; height:70px;
       }
